build_cli_err_3.txt
warning: unused import: `file_id::FileId`
 --> crates\core\src\vfs.rs:6:5
  |
6 | use file_id::FileId;
  |     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `deve_core` (lib) generated 1 warning (run `cargo fix --lib -p deve_core` to apply 1 suggestion)
   Compiling deve_cli v0.0.1 (E:\gitclone\Deve-Note\apps\cli)
warning: unused import: `tokio::net::TcpListener`
 --> apps\cli\src\server\mod.rs:3:5
  |
3 | use tokio::net::TcpListener;
  |     ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
  --> apps\cli\src\server\ws.rs:44:9
   |
44 |     let mut send_task = tokio::spawn(async move {
   |         ----^^^^^^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0609]: no field `timestamp` on type `&(u64, LedgerEntry)`
  --> apps\cli\src\main.rs:78:55
   |
78 |                     println!("[{}] {} {:?}", i, entry.timestamp, entry.op);
   |                                                       ^^^^^^^^^ unknown field
   |
help: one of the expressions' fields has a field of the same name
   |
78 |                     println!("[{}] {} {:?}", i, entry.1.timestamp, entry.op);
   |                                                       ++

error[E0609]: no field `op` on type `&(u64, LedgerEntry)`
  --> apps\cli\src\main.rs:78:72
   |
78 |                     println!("[{}] {} {:?}", i, entry.timestamp, entry.op);
   |                                                                        ^^ unknown field
   |
help: one of the expressions' fields has a field of the same name
   |
78 |                     println!("[{}] {} {:?}", i, entry.timestamp, entry.1.op);
   |                                                                        ++

error[E0308]: mismatched types
  --> apps\cli\src\main.rs:81:69
   |
81 |                 let content = deve_core::state::reconstruct_content(&ops);
   |                               ------------------------------------- ^^^^ expected `&[LedgerEntry]`, found `&Vec<(u64, LedgerEntry)>`
   |                               |
   |                               arguments to this function are incorrect
   |
   = note: expected reference `&[LedgerEntry]`
              found reference `&Vec<(u64, LedgerEntry)>`
note: function defined here
  --> E:\gitclone\Deve-Note\crates\core\src\state.rs:4:8
   |
 4 | pub fn reconstruct_content(ops: &[LedgerEntry]) -> String {
   |        ^^^^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0308, E0609.
For more information about an error, try `rustc --explain E0308`.
warning: `deve_cli` (bin "deve_cli") generated 2 warnings
error: could not compile `deve_cli` (bin "deve_cli") due to 3 previous errors; 2 warnings emitted
